fix: :lipstick: Fix layout shift when using video poster

--- a/src/components/App/App.module.css
+++ b/src/components/App/App.module.css
@@ -67,6 +67,11 @@
     max-width: calc(100% - 1.5rem - 375px);
   }
 
+  .hero-image {
+    height: 250px;
+    max-width: 375px;
+  }
+
   .hero-image-background {
     height: 250px;
     padding-top: initial;
